# libmanp

./: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.yaml  README.md  package.json  svelte.config.js
.github/workflows/: main.yml
src/: global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: add_book.rs  add_new_book.rs  annihilate_book.rs  edit_book.rs  main.rs  structs.rs  watch.rs
src/lib/: BookActions.svelte  Books.svelte  Groups.svelte  bookUtilFunctions.ts
src/lib/styles/: _global.scss  style.scss
src/routes/: +layout.svelte  +page.svelte  +page.ts  bookActions.ts  libActions.ts
src/routes/about/: +page.svelte
