[package]
name = "libmanp"
version = "0.1.1"
description = "library manager"
authors = ["pes18fan"]
license = "GNU General Public License 3.0"
repository = "https://www.github.com/pes18fan/libmanp/"
default-run = "libmanp"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.5", features = ["dialog-message", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "path-all", "windows7-compat"] }
notify = "5.1.0"
notify-debouncer-mini = "0.2.0"
lazy_static = "1.4.0"
nano-id = "0.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
